🔎 All orders get by day, UI: button to refersh daily orders
